infra/legacy-aws/k8s/backend/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: unify

spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth

  template:
    metadata:
      labels:
        app: auth

    spec:
      containers:
        - name: auth

          image: 564325282647.dkr.ecr.ap-south-1.amazonaws.com/unify-backend:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8001
