infra/legacy-aws/k8s/backend/workspace-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace
  namespace: unify

spec:
  replicas: 1

  selector:
    matchLabels:
      app: workspace

  template:
    metadata:
      labels:
        app: workspace

    spec:
      containers:
        - name: workspace

          image: 564325282647.dkr.ecr.ap-south-1.amazonaws.com/unify-backend:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8002
