infra/legacy-aws/k8s/backend/workspace-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workspace
  namespace: unify

spec:
  selector:
    app: workspace

  ports:
    - port: 80
      targetPort: 8002
