infra/legacy-aws/k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unify
  namespace: unify

spec:
  ingressClassName: traefik

  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000

          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
